update to all-caps in title

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CMUTech4Society/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Alma | Lewis The Black Archive
+title: ALMA | LEWIS The Black Archive
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: a digital collection of books, academic publications, and artworks connected to Black art and art history 
 # description appears in meta tags and other locations
